--- a/style.css
+++ b/style.css
@@ -12,11 +12,10 @@ body {
 .divResult {
     all: unset;
     height: 7rem;
+    width: 100%;
     text-align: right;
     font-size: 100px;
     color: white;
-    padding-right: 10px;
-    padding-left: 10px;
     overflow-x: auto;
 }
 
@@ -59,4 +58,10 @@ body {
     grid-column: span 2;
     width: 100%;
     border-radius: 50px 50px;
+}
+
+#container {
+    width: 380px;
+    height: fit-content;
+    align-self: center;
 }
